src/snapshots/enderpy__lexer__tests__import-3.snap
---
source: src/lexer.rs
description: import a from b
---
[
    Token {
        kind: Import,
        value: None,
    },
    Token {
        kind: Identifier,
        value: String(
            "a",
        ),
    },
    Token {
        kind: From,
        value: None,
    },
    Token {
        kind: Identifier,
        value: String(
            "b",
        ),
    },
]
