src/snapshots/enderpy__lexer__tests__indentation-2.snap
---
source: src/lexer.rs
description: "if True:\n    if True:\n        pass\ndef"
---
[
    Token {
        kind: If,
        value: None,
    },
    Token {
        kind: True,
        value: None,
    },
    Token {
        kind: Colon,
        value: None,
    },
    Token {
        kind: NewLine,
        value: None,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
    },
    Token {
        kind: If,
        value: None,
    },
    Token {
        kind: True,
        value: None,
    },
    Token {
        kind: Colon,
        value: None,
    },
    Token {
        kind: NewLine,
        value: None,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
    },
    Token {
        kind: Pass,
        value: None,
    },
    Token {
        kind: NewLine,
        value: None,
    },
    Token {
        kind: Dedent,
        value: Indent(
            2,
        ),
    },
    Token {
        kind: Def,
        value: None,
    },
]
