src/snapshots/enderpy__lexer__tests__keywords-1.snap
---
source: src/lexer.rs
description: break class continue def del elif else except
---
[
    Token {
        kind: Break,
        value: None,
        start: 0,
        end: 5,
    },
    Token {
        kind: Class,
        value: None,
        start: 6,
        end: 11,
    },
    Token {
        kind: Continue,
        value: None,
        start: 12,
        end: 20,
    },
    Token {
        kind: Def,
        value: None,
        start: 21,
        end: 24,
    },
    Token {
        kind: Del,
        value: None,
        start: 25,
        end: 28,
    },
    Token {
        kind: Elif,
        value: None,
        start: 29,
        end: 33,
    },
    Token {
        kind: Else,
        value: None,
        start: 34,
        end: 38,
    },
    Token {
        kind: Except,
        value: None,
        start: 39,
        end: 45,
    },
]
