src/snapshots/enderpy__lexer__tests__numeric-binary-0.snap
---
source: src/lexer.rs
description: 0b0
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b0",
        ),
    },
]
